objects/vlocity_ins__VlocityCode__c.object
<CustomObject>
    <description>Represents Insurance and Health standard coding systems, such as HCPCS, ICD, CPT, CDT, CARC and RARC.</description>
    <fields>
        <fullName>vlocity_ins__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CodeSource__c</fullName>
        <externalId>true</externalId>
        <label>Code Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CodeSubType__c</fullName>
        <label>Code Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>PCS</fullName>
                </value>
                <value>
                    <fullName>CMS+PCS</fullName>
                </value>
                <value>
                    <fullName>ICD-9</fullName>
                </value>
                <value>
                    <fullName>ICD-10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CodeSystemType__c</fullName>
        <label>Code System Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_ins__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>DRG</fullName>
                </value>
                <value>
                    <fullName>ICD</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>HCPC</fullName>
                </value>
                <value>
                    <fullName>MS-DRG</fullName>
                </value>
                <value>
                    <fullName>RUG</fullName>
                </value>
                <value>
                    <fullName>CARC</fullName>
                </value>
                <value>
                    <fullName>RARC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LongDescription__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ShortDescription__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Insurance Code</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>